[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/star.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/star.tex" type="Texture" id=2]
[ext_resource path="res://assets/sounds/success.smp" type="Sample" id=3]

[sub_resource type="Animation" id=1]

resource/name = "idle"
length = 1.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:transform/scale")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.7, 1.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ] }

[sub_resource type="Animation" id=4]

resource/name = "pick_up"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 1.6, 1.6 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.5 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"picked_up" } ] }

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 46.0

[sub_resource type="SampleLibrary" id=3]

samples/success = { "db":0.0, "pitch":1.0, "sample":ExtResource( 3 ) }

[node name="star" type="Node2D"]

script/script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 1 )
anims/pick_up = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="area_2d" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 4 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="collision_shape" type="CollisionShape2D" parent="area_2d"]

transform/pos = Vector2( 0, 4 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="body_enter" from="area_2d" to="." method="_on_area_2d_body_enter"]


